Removed unnecessary code #12